config/mgmt/build/auth-config/pinniped-supervisor/ingress.ytt.yaml
apiVersion: v1
kind: Service
metadata:
    labels:
        app: pinniped-supervisor
    name: pinniped-supervisor
    namespace: pinniped-supervisor
spec:
    ports:
        - port: 8080
          protocol: TCP
    selector:
        app: pinniped-supervisor
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1e25ew05v62a720vhsetzrhalehzpsv6l6c5usw2mn4lley85ssnsajz2v3
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBiUEV3cDRiRVZwQ0lCUkxC
[...]
            e3k+eB8+Su3EzKrZj8REMKfCrrV3x7QpX9wqrOTF9By25sYQM6puSQ==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2022-04-11T21:31:17Z"
    mac: ENC[AES256_GCM,data:iRPWd+5A4sZVfYuJPSn2bCB14wy+/tqKlvQHsnklZGvYlGwUrmmHlWhvhsKovOH2BcRnA45wz96eINoQNhltGJiq38sfCuq2SFQECZjFHehzbODmUtqzXMikWbHMep/6bmgof/S4ZKKhKZyoxIDpkYYJCSeRKFhietuP3SmlfBA=,iv:e6StZynbM1IgUYntsM3kPBRn0rdU0U1TgK2d7mn4G+o=,tag:CqjRlxja+RCs0pO3ae+uCQ==,type:str]
    pgp: []
    encrypted_regex: ^(data|stringData|.*client.secret.*)$
    version: 3.7.2
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: pinniped-supervisor
    namespace: pinniped-supervisor
    annotations:
        ingress.kubernetes.io/force-ssl-redirect: "true"
        projectcontour.io/tls-cert-namespace: secure-ingress
spec:
    tls:
        - hosts:
            - pinniped.yaml.tv
          secretName: wildcard-yaml-tv
    rules:
        - host: pinniped.yaml.tv
          http:
            paths:
                - path: /
                  pathType: Prefix
                  backend:
                    service:
                        name: pinniped-supervisor
                        port:
                            number: 8080
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1e25ew05v62a720vhsetzrhalehzpsv6l6c5usw2mn4lley85ssnsajz2v3
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBiUEV3cDRiRVZwQ0lCUkxC
[...]
            e3k+eB8+Su3EzKrZj8REMKfCrrV3x7QpX9wqrOTF9By25sYQM6puSQ==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2022-04-11T21:31:17Z"
    mac: ENC[AES256_GCM,data:iRPWd+5A4sZVfYuJPSn2bCB14wy+/tqKlvQHsnklZGvYlGwUrmmHlWhvhsKovOH2BcRnA45wz96eINoQNhltGJiq38sfCuq2SFQECZjFHehzbODmUtqzXMikWbHMep/6bmgof/S4ZKKhKZyoxIDpkYYJCSeRKFhietuP3SmlfBA=,iv:e6StZynbM1IgUYntsM3kPBRn0rdU0U1TgK2d7mn4G+o=,tag:CqjRlxja+RCs0pO3ae+uCQ==,type:str]
    pgp: []
    encrypted_regex: ^(data|stringData|.*client.secret.*)$
    version: 3.7.2
